k8s/resources/prometheus/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.k8s.sbbh.cloud`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - kind: Rule
      match: Host(`alertmanager.k8s.sbbh.cloud`)
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
    - kind: Rule
      match: Host(`grafana.k8s.sbbh.cloud`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
